--- a/ReactionTimeStudio/reaction_time_tester_page.css
+++ b/ReactionTimeStudio/reaction_time_tester_page.css
@@ -45,6 +45,15 @@
     font-size: 30px;
 }
 
+#reaction_time_tester_page_start_screen_user_biological_info{
+    user-select: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
 #reaction_time_tester_page_start_screen_min_max_delay{
     user-select: none;
 }
