enhanced site readability

--- a/ReactionTimeStudio/main_page.css
+++ b/ReactionTimeStudio/main_page.css
@@ -17,3 +17,15 @@
     font-size: 40px;
     margin: 0px;
 }
+
+#reaction_time_tester_page_button{
+    width: 146.391px;
+    height: 50px;
+    font-size: 18px;
+}
+
+#reaction_time_trainer_page_button{
+    width: 146.391px;
+    height: 50px;
+    font-size: 18px;
+}
