--- a/ReactionTimeStudio/reaction_time_tester_page.css
+++ b/ReactionTimeStudio/reaction_time_tester_page.css
@@ -23,6 +23,7 @@
     align-items: center;
     gap: 10px;
     font-size: 30px;
+    font-weight: bold;
 }
 
 #reaction_time_tester_page_start_screen_color_picker_green{
@@ -33,6 +34,7 @@
     align-items: center;
     gap: 10px;
     font-size: 30px;
+    font-weight: bold;
 }
 
 #reaction_time_tester_page_start_screen_color_picker_blue{
@@ -43,6 +45,7 @@
     align-items: center;
     gap: 10px;
     font-size: 30px;
+    font-weight: bold;
 }
 
 #reaction_time_tester_page_start_screen_user_biological_info{
@@ -52,9 +55,11 @@
     justify-content: center;
     align-items: center;
     gap: 10px;
+    font-size: 17px;
 }
 
 #reaction_time_tester_page_start_screen_min_max_delay{
+    font-size: 17px;
     user-select: none;
 }
 
@@ -64,6 +69,9 @@
 }
 
 #reaction_time_tester_page_start_screen_start_game_button{
+    width: 146.391px;
+    height: 50px;
+    font-size: 22px;
     user-select: none;
 }
 
@@ -72,6 +80,9 @@
     top: 20px;
     right: 20px;
     user-select: none;
+    width: 100px;
+    height: 50px;
+    font-size: 30px;
 }
 
 #reaction_time_tester_page_exit_button:active{
