made buttons on main page not user selectable

--- a/ReactionTimeStudio/main_page.css
+++ b/ReactionTimeStudio/main_page.css
@@ -23,10 +23,12 @@
     width: 146.391px;
     height: 50px;
     font-size: 18px;
+    user-select: none;
 }
 
 #reaction_time_trainer_page_button{
     width: 146.391px;
     height: 50px;
     font-size: 18px;
+    user-select: none;
 }
